Bug 164951 - [ath] [patch] Problem build of if_ath driver with certain mode
Summary: [ath] [patch] Problem build of if_ath driver with certain mode
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: wireless (show other bugs)
Version: Unspecified
Hardware: Any Any
: Normal Affects Only Me
Assignee: Adrian Chadd
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-10 11:50 UTC by misho
Modified: 2018-10-04 00:45 UTC (History)
1 user (show)

See Also:
bugmeister: mfc-stable10?
bugmeister: mfc-stable9?
bugmeister: mfc-stable8?


Attachments
file.diff (295 bytes, patch)
2012-02-10 11:50 UTC, misho
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description misho 2012-02-10 11:50:04 UTC
After last build of -current with my kernel config, I found crash in build process.
After some investigation I found missing variable *ic if you use IEEE80211_SUPPORT_SUPERG.

How-To-Repeat: Add this line in kernel config::
 options         IEEE80211_SUPPORT_SUPERG
Comment 1 Mark Linimon freebsd_committer freebsd_triage 2012-04-09 04:11:29 UTC
Responsible Changed
From-To: freebsd-bugs->freebsd-wireless

Over to maintainer(s).
Comment 2 dfilter service freebsd_committer freebsd_triage 2012-04-10 20:47:59 UTC
Author: adrian
Date: Tue Apr 10 19:47:44 2012
New Revision: 234110
URL: http://svn.freebsd.org/changeset/base/234110

Log:
  Fix compilation with IEEE80211_ENABLE_SUPERG defined.
  
  PR:		kern/164951

Modified:
  head/sys/dev/ath/if_ath.c

Modified: head/sys/dev/ath/if_ath.c
==============================================================================
--- head/sys/dev/ath/if_ath.c	Tue Apr 10 19:25:43 2012	(r234109)
+++ head/sys/dev/ath/if_ath.c	Tue Apr 10 19:47:44 2012	(r234110)
@@ -4906,6 +4906,7 @@ ath_tx_processq(struct ath_softc *sc, st
 	struct ath_tx_status *ts;
 	struct ieee80211_node *ni;
 	struct ath_node *an;
+	struct ieee80211com *ic = sc->sc_ifp->if_l2com;
 	int nacked;
 	HAL_STATUS status;
 
_______________________________________________
svn-src-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/svn-src-all
To unsubscribe, send any mail to "svn-src-all-unsubscribe@freebsd.org"
Comment 3 Eitan Adler freebsd_committer freebsd_triage 2012-06-24 19:44:31 UTC
State Changed
From-To: open->patched

committed in r234110 


Comment 4 Eitan Adler freebsd_committer freebsd_triage 2012-06-24 19:44:31 UTC
Responsible Changed
From-To: freebsd-wireless->adrian

committed in r234110
Comment 5 Ed Maste freebsd_committer freebsd_triage 2018-10-04 00:45:52 UTC
Fix committed in 2012