Fix compilation with IEEE80211_ENABLE_SUPERG defined.

PR:		kern/164951